<resources>
    <string name="app_name" translatable="false">GIL</string>
    <string name="app_name_desc" translatable="false">Guest Identity Link</string>

    <!--- General-->
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No internet connection detected. Please check your network and try again.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="_continue">Continue</string>
    <string name="change">Change</string>
    <string name="required_field">Required field *</string>
    <string name="add_image">Add image</string>
    <string name="delete_image">Delete image</string>
    <string name="edit_image">Edit image</string>
    <string name="edit_event">Edit event</string>
    <string name="send">Send</string>
    <string name="open_settings">Settings</string>


    <!--- LogIn-->
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_now">Don´t have an account yet? \nClick here to sign up.</string>
    <string name="invalid_logEmail">Please enter your email address.</string>
    <string name="invalid_logPass">Please enter your password.</string>

    <string name="invalid_data">Oops! The username or password doesn’t match. Please double-check your details and try again.</string>
    <string name="login_success">Login successful. Welcome.</string>
    <string name="server_error">Oops! An unexpected error occurred. Please try again later.</string>

    <string name="forgot_password">Forgot your password?</string>
    <string name="change_password">Update password</string>
    <string name="forgot_code">Code</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_updated_success">The password was successfully updated.</string>
    <string name="no_email_found">No user found with this email account. Please verify the information and try again.</string>
    <string name="send_code">Code sent.</string>
    <string name="verification_code_sent">We have sent you a verification code by email.</string>
    <string name="incorrect_code">The code is incorrect. Please verify it again.</string>
    <string name="password_changed_successfully">The password was changed successfully.</string>
    <string name="invalid_code_val">The code field cannot be empty.</string>

    <!--- Sign Up -->
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="confirm_password">Confirm password</string>

    <string name="invalid_name">Your name must be at least 3 characters long.</string>
    <string name="invalid_email">The email field cannot be empty. Please enter your email address.</string>
    <string name="invalid_confirmEmail">The confirm email field cannot be empty. Please confirm your email address.</string>
    <string name="invalid_confirmPass">The confirm password field cannot be empty. Please confirm your password.</string>
    <string name="not_same_value">The fields don’t match. Please check and try again.</string>
    <string name="not_valid_email">Please enter a valid email address (e.g., user@domain.com).</string>
    <string name="invalid_password">The password must be at least 8 characters long and include uppercase letters, lowercase letters, numbers, and symbols.</string>
    <string name="user_exists">An account with this email address already exists. Please verify the information and try again.</string>


    <!---Terms and Conditions-->
    <string name="accept_terms">I accept the Terms and Conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="registration_success">Your registration was completed successfully.</string>

    <!--- Menu -->
    <string name="events">Events</string>
    <string name="contacts">Contacts</string>
    <string name="new_event">New event</string>
    <string name="scan_code">Scanner</string>
    <string name="settings">Settings</string>

    <!--- Events -->
    <string name="my_events">My events</string>
    <string name="my_invites">My invites</string>
    <string name="event_name">Name</string>
    <string name="event_description">Description</string>
    <string name="event_type">Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="street">Street and number</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="my_event_date">My event day</string>
    <string name="event_category_social">Social / Celebration</string>
    <string name="event_category_corporate">Corporate / Professional</string>
    <string name="event_category_academic">Academic / Educational</string>
    <string name="event_category_other">Other</string>
    <string name="access_controller">Authorized person to scan QR</string>
    <string name="invalid_date">The start date cannot be earlier than today. Please verify.</string>
    <string name="invalid_date_bigger">The start date cannot be bigger than end date. Please verify.</string>
    <string name="event_save_success">The event was successfully saved.</string>
    <string name="event_update_success">The event was successfully updated.</string>

    <string name="cancel_event">Delete event.</string>
    <string name="confirm_cancel_event">Are you sure you want to delete this event?</string>
    <string name="event_cancel_success">The event was deleted successfully.</string>

    <string name="invitations">Invitations</string>
    <string name="no_guests_found">No guests found.</string>

    <string name="add_guest">Add guest</string>
    <string name="invitation_name_label">Name on the invitation</string>
    <string name="send_invitation">Send invitation</string>
    <string name="send_invitation_success">Invitation sent successfully</string>

    <string name="no_pending_events">You have no pending events.</string>
    <string name="no_events">No events.</string>
    <string name="no_events_found">No events found.</string>
    <string name="no_invites_found">No invitations found.</string>


    <!--- Friends -->
    <string name="my_friends">My friends</string>
    <string name="my_contacts">My contacts</string>
    <string name="received_request">Received</string>
    <string name="sent_request">Sent</string>

    <!--- Contacts Menu -->
    <string name="my_guests">My guests</string>
    <string name="friends">Friends</string>

    <!--- Contacts -->Delete contact
    <string name="contact">Contact</string>
    <string name="add_contact">Add contact</string>
    <string name="contact_save_successful">Contact saved successfully.</string>
    <string name="contact_update_successful">Contact updated successfully.</string>
    <string name="contact_delete_successful">Contact deleted successfully.</string>
    <string name="no_contacts_found">No contacts found.</string>
    <string name="no_results_for">No results for "%1$s".</string>
    <string name="delete_contact">Delete contact.</string>
    <string name="confirm_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="error_new_contact">Could not add the contact, please try again.</string>
    <string name="error_update_contact">Could not update the contact, please try again.</string>
    <string name="error_delete_contact">Could not delete the contact, please try again.</string>

    <!--- Friends -->
    <string name="add_friend">Add friend</string>
    <string name="no_friends_found">No friends found.</string>
    <string name="no_sol_rec_found">No received requests found.</string>
    <string name="no_sol_send_found">No sent requests found.</string>
    <string name="sol_friend_send">The request was sent successfully.</string>
    <string name="sol_no_friend_found">We could not find your friend with that email address. Please check that it is correct and try again.</string>
    <string name="sol_friend_pending">You already sent a friend request to this user. It is waiting for a response.</string>
    <string name="reject_friend">Reject friend</string>
    <string name="confirm_reject_friend">Are you sure you want to reject this friend request?</string>
    <string name="friend_request_rejected_success">The friend request was successfully rejected.</string>
    <string name="friend_request_accepted_success">The friend request was successfully accepted.</string>
    <string name="cancel_request">Cancel request</string>
    <string name="confirm_cancel_request">Are you sure you want to cancel this friend request?</string>
    <string name="friend_request_cancelled_success">The friend request was successfully cancelled.</string>
    <string name="delete_friend">Delete friend</string>
    <string name="confirm_delete_friend">Are you sure you want to delete this friend?</string>
    <string name="delete_friend_success">The friend was successfully deleted.</string>


    <!--- Settings -->
    <string name="logOut">Log Out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="save">Save</string>
    <string name="image_updated_success">The image was successfully updated.</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_name_success">The name was successfully updated.</string>

    <!--- Scan -->

    <string name="permission_title">Permission</string>
    <string name="permission_message">Permission is only needed to read QR codes.</string>
    <string name="permission_denied_permanently">Permission was permanently denied</string>
    <string name="valid_scan">Validating&#8230;</string>
    <string name="valid_code_scan">Valid code</string>
    <string name="invalid_code_scan">Invalid code</string>
    <string name="code_scan_before">The code has already been scanned</string>

    <!--- Pendientes
    <string name="changes_saved">Changes have been saved successfully.</string>
    <string name="message_sent">Your message has been sent successfully.</string>
    <string name="password_updated">Your password has been updated successfully.</string>
    <string name="account_deleted">The account has been deleted successfully.</string>
    <string name="file_uploaded">The file was uploaded successfully.</string>
    <string name="operation_successful">The operation was completed successfully.</string>
    <string name="info_updated">Your information has been updated.</string>
    <string name="request_processed">Your request has been processed successfully.</string>
    -->

</resources>