<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.cardview.widget.CardView
    android:id="@+id/cvFriendDialog"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:cardBackgroundColor="@color/primaryLight"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/btnCloseFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_cancel"
            app:tint="@color/secondary"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"

            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/add_friend"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/accent"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/lbFriendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glLogMiddle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lbLogPass"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_person"
            app:endIconMode="clear_text"
            android:visibility="gone"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFriendName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textColor="@color/white"
                android:maxLength="20"
                android:maxLines="1"
                android:inputType="textCapSentences"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/lbFriendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glLogMiddle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lbLogPass"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_mail"
            app:endIconMode="clear_text"
            android:enabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFriendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textColor="@color/white"
                android:maxLength="50"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp"
            >

            <Button
                style="@style/CustomButtonCancel"
                android:id="@+id/btDiaFriendDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbLogPass"
                app:layout_constraintBottom_toTopOf="@+id/tvRegister"
                android:layout_marginVertical="15dp"
                android:text="@string/delete"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                />

            <Button
                style="@style/CustomButtonAccept"
                android:id="@+id/btDiaFriendAdd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbLogPass"
                app:layout_constraintBottom_toTopOf="@+id/tvRegister"
                android:layout_marginVertical="15dp"
                android:text="@string/add"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>