<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryDark"
    tools:context=".features.settings.ui.SettingsFragment">

    <TextView
        android:id="@+id/tvTitleSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/secondary"
        android:background="@color/primaryDark"
        android:gravity="center"
        android:text="@string/settings" />



        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:riv_border_color="#FFFFFF"
            app:riv_border_width="3dp"
            app:riv_corner_radius="10dp"
            app:riv_oval="true"
            app:srcCompat="@drawable/ic_user"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleSettings"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            />

        <ImageView
            android:id="@+id/ivEditPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit_photo"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@+id/ivProfile"

            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/lbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_user"
            app:endIconMode="clear_text"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textColor="@color/white"
                android:maxLength="50"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/lbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbName"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            app:endIconMode="clear_text"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textColor="@color/white"
                android:maxLength="50"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/CustomButton"
            android:text="@string/logOut"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbEmail"
            app:layout_constraintEnd_toEndOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>