<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.contacts.ui.fragments.TabFriendsFragment">

    <TextView
        android:id="@+id/tvFriendsFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_friends_found"
        android:textSize="20sp"
        android:visibility="invisible"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomSearchInputLayout"
        android:id="@+id/lbFriendSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/search"
        app:startIconDrawable="@drawable/ic_search_color"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFriendSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textCursorDrawable="@drawable/white_cursor"
            android:textColor="@color/white"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriends"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbFriendSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add_btn"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:rippleColor="@color/grey_load"
        android:backgroundTint="@color/secondary"
        android:elevation="6dp"
        app:tint="@color/accent"
        />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbFriendSearch"
        app:shimmer_auto_start="true"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/viewFriendsLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>
            <include layout="@layout/item_contact_load"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>